@@ -5,11 +5,13 @@ import java.util.*;
 class CodeGeneratorOptions {
     protected int optimizeLevel;
     protected boolean generatePIC;
+    protected boolean generatePIE;
     protected boolean verboseAsm;
 
     public CodeGeneratorOptions() {
         optimizeLevel = 0;
         generatePIC = false;
+        generatePIE = false;
         verboseAsm = false;
     }
 
@@ -38,11 +40,23 @@ class CodeGeneratorOptions {
         return verboseAsm;
     }
 
+    public boolean isPositionIndependent() {
+        return generatePIC || generatePIE;
+    }
+
     public void generatePIC() {
         this.generatePIC = true;
     }
 
     public boolean isPICRequired() {
         return generatePIC;
+    }
+
+    public void generatePIE() {
+        this.generatePIE = true;
+    }
+
+    public boolean isPIERequired() {
+        return generatePIE;
     }
 }
