@@ -1,3 +1,14 @@
+Sun Sep 28 07:06:37 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Compiler.java: implement -shared.
+
+	* net/loveruby/cflat/compiler/Options.java: new option -shared.
+
+	* net/loveruby/cflat/compiler/CodeGeneratorOptions.java: ditto.
+
+	* net/loveruby/cflat/compiler/SourceFile.java: new method
+	  #linkedFileName.
+
 Sun Sep 28 05:07:30 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* implement PIC generation.
